# norost-a

./: .gitignore  Cargo.toml  Makefile  README.rst  boot.s  common.mk  common_rust.mk  init.elf  initfs.list  link.ld  pci_fs.list  run.mk  rustfmt.toml
.cargo/: config.toml
Documentation/: about.rst  data_types.rst  filesystem.rst  interface_design.rst  ipc.rst  notifications.rst  service_discovery.rst  syscalls.rst  task_spawn.rst
Documentation/kernel/: about.rst  boot.rst  goals.rst  interrupts.rst  io.rst  scheduling.rst  virtual_memory_manager.rst
boot/: Makefile
boot/src/riscv64/: Makefile  boot.s
git_hooks/: rustfmt.sh
kernel/: Cargo.toml  Makefile  boot.s  init.elf  link.ld  startfiles
kernel/src/: elf.rs  log.rs  main.rs  memory.rs  multiboot.rs  powerstate.rs  slab.rs  sync.rs  syscall.rs  task.rs  util.rs  vfs.rs
kernel/src/alloc/: raw_vec.rs  vec.rs
kernel/src/allocator/: arena.rs
kernel/src/arch/: interrupts.rs  map.rs  mod.rs  page.rs  vms.rs
kernel/src/arch/riscv/: Makefile  error.s  link.ld  mod.rs  plic.rs  plic.s  registers.rs  registers.s  sbi.rs  start.s  syscall.s  timer.s  trap.s  types.s
kernel/src/arch/riscv/vms/: mod.rs  sv39.rs
kernel/src/boot/: riscv.ld  riscv.s
kernel/src/driver/: device_tree.rs
kernel/src/driver/fs/: cpio.rs  initramfs.rs  mod.rs
kernel/src/io/: uart.rs
kernel/src/memory/: allocator.rs  area.rs  buddy.rs  mod.rs  ppn.rs  reserved.rs  shared.rs  stack.rs  vms.rs
kernel/src/task/: address.rs  executor.rs  group.rs  ipc.rs  mod.rs  notification.rs  registry.rs
lib/: README.rst
lib/c/dux/: Makefile  README.rst
lib/c/dux/include/: dux.h
lib/c/dux/src/: dux.c
lib/c/errno/include/: errno.h
lib/c/kernel/: Makefile  README.rst
lib/c/kernel/include/: kernel.h
lib/c/posix/: Makefile  README.rst
lib/c/posix/include/: fcntl.h  pthread.h
lib/c/posix/include/pthread/: cond.h  mutex.h  rwlock.h  spinlock.h
lib/c/posix/include/sys/: mman.h  time.h
lib/c/posix/src/: common.c  common.h  fcntl.c
lib/c/posix/src/crt0/: riscv.s  riscv64-pc-dux.s
lib/c/posix/src/pthread/: mutex.c  pthread.c
lib/c/std/: Makefile  README.rst  test.sh
lib/c/std/include/: dirent.h  dux.h  errno.h  kernel.h  limits.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
lib/c/std/include/pthread/: barrier.h  glibc.h  storage.h
lib/c/std/include/sys/: mman.h  types.h  uio.h
lib/c/std/src/: common.c  common.h  dirent.c  dux.c  fcntl.c  fd.c  fd.h  format.c  format.h  puts.c  stdio.c  string.c
lib/c/std/src/crt0/: riscv64-pc-dux.s
lib/c/std/src/sys/: uio.c
lib/c/types/: README.rst
lib/c/types/include/: stdint.h
lib/rust/device_tree/: Cargo.toml
lib/rust/device_tree/src/: lib.rs
lib/rust/device_tree/test/: qemu_system_riscv64.dtb
lib/rust/driver/: Cargo.toml
lib/rust/driver/src/: lib.rs
lib/rust/dux/: Cargo.toml
lib/rust/dux/src/: lib.rs  mem.rs  page.rs  task.rs  util.rs
lib/rust/dux/src/ipc/: list.rs  mod.rs  op.rs  queue.rs
lib/rust/dux_ar/: Cargo.toml  Makefile
lib/rust/dux_ar/src/: ffi.rs  lib.rs  mem.rs  panic.rs
lib/rust/dux_ar/src/ipc/: list.rs  mod.rs
lib/rust/kernel/: Cargo.toml
lib/rust/kernel/src/: lib.rs  riscv.rs
lib/rust/pci/: Cargo.toml
lib/rust/pci/src/: lib.rs
lib/rust/virtio/: Cargo.toml
lib/rust/virtio/src/: block.rs  lib.rs  pci.rs  queue.rs
lib/rust/virtio_block/: Cargo.toml
lib/rust/virtio_block/src/: fatfs.rs  lib.rs  sector.rs
lib/rust/virtio_gpu/: Cargo.toml
lib/rust/virtio_gpu/src/: lib.rs
lib/rust/virtio_gpu/src/controlq/: display_info.rs  edid.rs  mod.rs  set_scanout.rs  transfer_to_host_2d.rs
lib/rust/virtio_gpu/src/controlq/resource/: attach_backing.rs  create_2d.rs  detach_backing.rs  flush.rs  unref.rs
lib/rust/virtio_gpu/src/cursorq/: mod.rs
lib/rust/virtio_input/: Cargo.toml
lib/rust/virtio_input/src/: lib.rs
lib/rust/virtio_input/src/ev/: kbd.rs  mod.rs
scripts/: check_bits.py
services/: Makefile
services/driver/console/: .gitignore  Cargo.toml  Makefile  font.bitmap.xz
services/driver/console/src/: letter.rs  main.rs  rtbegin.rs
services/driver/fat/: Cargo.toml  Makefile
services/driver/fat/src/: io.rs  main.rs  rtbegin.rs
services/driver/mouse/: Cargo.toml  Makefile
services/driver/mouse/src/: main.rs
services/driver/pci/: Cargo.toml  Makefile  build.rs
services/driver/pci/src/: main.rs  notification.rs
services/driver/plic/: Cargo.toml  Makefile
services/driver/plic/src/: main.rs  rtbegin.rs
services/driver/uart/: Cargo.toml  Makefile
services/driver/uart/src/: main.rs  rtbegin.rs
services/driver/virtio_block/: Cargo.toml  Makefile
services/driver/virtio_block/src/: main.rs  notification.rs  rtbegin.rs
services/driver/virtio_gpu/: Cargo.toml  Makefile
services/driver/virtio_gpu/src/: main.rs
services/driver/virtio_input/: Cargo.toml
services/driver/virtio_input/scancode_sets/: azerty.kbd
services/driver/virtio_input/src/: main.rs  scancode.rs
services/init/b0/: Cargo.toml  Makefile  README.rst  build.rs
services/init/b0/src/: console.rs  device_tree.rs  fs.rs  main.rs  pci.rs  plic.rs  rtbegin.rs  uart.rs
services/init/hello_world/: Makefile  hello.c  riscv.s  riscv64.s
services/init/hello_world_virtio/: Cargo.toml  Makefile
services/init/hello_world_virtio/src/: main.rs
services/init/minish/: Makefile
services/init/minish/src/: main.c
services/init/multi_process/: Cargo.toml  Makefile
services/init/multi_process/src/: main.rs
src/: idle.rs  log.rs  main.rs  memory.rs  powerstate.rs  sync.rs  test.rs  util.rs
src/alloc/: box.rs  mod.rs  raw_vec.rs  vec.rs
src/alloc/allocators/: mod.rs  watermark.rs
src/arch/: mod.rs
src/arch/riscv/: mod.rs
src/driver/: device_tree.rs  mod.rs
src/driver/fs/: cpio.rs  initramfs.rs  mod.rs
src/io/: mod.rs  uart.rs
