[workspace]

members = [
	"kernel",
	"lib/rust/device_tree",
	"lib/rust/dux",
	"lib/rust/dux_ar",
	"lib/rust/kernel",
	"lib/rust/pci",
	"lib/rust/virtio",
	"lib/rust/virtio_block",
	"services/init/hello_world_virtio",
	"services/init/multi_process",
	"services/init/b0",
]

[profile.dev]
opt-level = 3
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
lto = true
