[package]
name = "virtio_input"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dux = { path = "../dux/" }
kernel = { path = "../kernel/", package = "syscalls" }
pci = { path = "../pci/" }
simple_endian = { path = "../../../thirdparty/rust/simple-endian/" }
vcell = { path = "../../../thirdparty/rust/vcell/" }
virtio = { path = "../virtio" }
