[package]
name = "fat_driver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dux = { path = "../../../lib/rust/dux/" }
fatfs = { path = "../../../thirdparty/rust/fatfs", default-features = false }
kernel = { path = "../../../lib/rust/kernel/", package = "syscalls" }
