[package]
name = "pci_manager"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../../../lib/rust/kernel/", package = "syscalls" }
dux = { path = "../../../lib/rust/dux/" }
pci = { path = "../../../lib/rust/pci/" }
driver = { path = "../../../lib/rust/driver/", default_features = false, features = ["parse-device-tree-args", "to-pci-args"] }
