[package]
name = "b0"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_tree = { path = "../../../lib/rust/device_tree/" }
kernel = { path = "../../../lib/rust/kernel/", package = "syscalls" }
dux = { path = "../../../lib/rust/dux/" }
xmas-elf = { path = "../../../thirdparty/rust/xmas-elf/" }
virtio = { path = "../../../lib/rust/virtio" }
virtio_block = { path = "../../../lib/rust/virtio_block" }
pci = { path = "../../../lib/rust/pci" }
#fatfs = { path = "../../../thirdparty/rust/fatfs" }
