[package]
name = "hello_world_virtio"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../../../lib/rust/kernel/", package = "syscalls" }
pci = { path = "../../../lib/rust/pci/" }
virtio = { path = "../../../lib/rust/virtio/" }
